Fix code snippets window being too small

--- a/app/assets/stylesheets/pages/track-page.scss
+++ b/app/assets/stylesheets/pages/track-page.scss
@@ -138,7 +138,7 @@ body.controller-my-tracks.action-show {
                 background:#fafafa;
                 @include font-size(10, 13);
                 padding:2px 5px;
-                max-height:150px;
+                max-height:154px;
                 code {
                     background:#f8f8f8;
                 }
